--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "azure-function-express": "2.0.0",
-    "jwt-decode": "3.1.2"
+    "express": "4.18.1",
+    "jwt-decode": "3.1.2",
+    "node-fetch": "2.6.7"
   },
   "devDependencies": {}
 }
